--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1", 
-	"dev": "npm -w packages/react-frontend run dev"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "npm -w packages/react-frontend run dev"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "workspaces": [
         "packages/*"
-    ]
+    ],
+    "devDependencies": {
+        "nodemon": "^3.1.9"
+    }
 }
